--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e677af">  <td>21/06/09 17:18:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestAppium.beforeMethod()[pri:0, instance:com.tests.appium.TestAppium@1b1473ab]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1162918744</td>   <td></td> </tr>
-<tr bgcolor="e677af">  <td>21/06/09 17:17:30</td>   <td>-34325</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAppium.checkSuccessfulRegistration()[pri:0, instance:com.tests.appium.TestAppium@1b1473ab]">checkSuccessfulRegistration</td> 
-  <td>main@1162918744</td>   <td></td> </tr>
-<tr bgcolor="e677af">  <td>21/06/09 17:19:05</td>   <td>60253</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestAppium.afterMethod()[pri:0, instance:com.tests.appium.TestAppium@1b1473ab]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1162918744</td>   <td></td> </tr>
-<tr bgcolor="e677af">  <td>21/06/09 17:18:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestAppium.beforeMethod()[pri:0, instance:com.tests.appium.TestAppium@1b1473ab]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1162918744</td>   <td></td> </tr>
-<tr bgcolor="e677af">  <td>21/06/09 17:18:45</td>   <td>40150</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAppium.checkSuccessfulLogin()[pri:0, instance:com.tests.appium.TestAppium@1b1473ab]">checkSuccessfulLogin</td> 
-  <td>main@1162918744</td>   <td></td> </tr>
-<tr bgcolor="e677af">  <td>21/06/09 17:19:05</td>   <td>60253</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestAppium.afterMethod()[pri:0, instance:com.tests.appium.TestAppium@1b1473ab]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1162918744</td>   <td></td> </tr>
+<tr bgcolor="8da18f">  <td>21/06/23 15:39:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAppiumNative.checkSuccessfulLogin()[pri:0, instance:com.tests.appium.TestAppiumNative@353d0772]">checkSuccessfulLogin</td> 
+  <td>main@1297978429</td>   <td></td> </tr>
+<tr bgcolor="8da18f">  <td>21/06/23 15:38:49</td>   <td>-55548</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAppiumNative.checkSuccessfulRegistration()[pri:0, instance:com.tests.appium.TestAppiumNative@353d0772]">checkSuccessfulRegistration</td> 
+  <td>main@1297978429</td>   <td></td> </tr>
+<tr bgcolor="8da18f">  <td>21/06/23 15:39:16</td>   <td>-29078</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestAppiumNative.beforeMethod()[pri:0, instance:com.tests.appium.TestAppiumNative@353d0772]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1297978429</td>   <td></td> </tr>
+<tr bgcolor="8da18f">  <td>21/06/23 15:40:06</td>   <td>21086</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestAppiumNative.afterMethod()[pri:0, instance:com.tests.appium.TestAppiumNative@353d0772]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1297978429</td>   <td></td> </tr>
+<tr bgcolor="8da18f">  <td>21/06/23 15:39:16</td>   <td>-29078</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestAppiumNative.beforeMethod()[pri:0, instance:com.tests.appium.TestAppiumNative@353d0772]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1297978429</td>   <td></td> </tr>
+<tr bgcolor="8da18f">  <td>21/06/23 15:40:06</td>   <td>21086</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestAppiumNative.afterMethod()[pri:0, instance:com.tests.appium.TestAppiumNative@353d0772]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1297978429</td>   <td></td> </tr>
 </table>
